Site content is no longer covered by nax bar at smaller screen widths.

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,10 +1,10 @@
-#app-container {
+.app-container {
     // display: grid;
     display: flex;
     flex-direction: column;
     flex: auto;
     
-    #top-nav {
+    .top-nav {
         display: flex;
         // flex: 1;
         // height: 4em;
@@ -13,9 +13,15 @@
         // height: 56px;
     }
 
+    @media (max-width: 765px) {
+        .main {
+            margin-top: 150px;
+        }
+    }
+
     .main {
         display: flex;
-        margin-top: 4em;
+        // margin-top: 4em;
         padding-top: 65px;
         // flex: 11;
         // height: 100%;
@@ -25,6 +31,9 @@
         .list-container {
             border: solid black 1px;
         }
+
         
     }
 }
+
+
